# interaction-pattern-fault-localization

./: .gitignore  README.md  requirements.txt
data/rq3_hyperagent/: manifest.json
experiments/cross_task/configs/n2/AG2/: config.json
experiments/cross_task/configs/n2/ChatDev/: config.json
experiments/cross_task/configs/n2/HyperAgent/: config.json
experiments/cross_task/configs/n2/MetaGPT/: config.json
experiments/cross_task/configs/n3/AG2/: config.json
experiments/cross_task/configs/n3/ChatDev/: config.json
experiments/cross_task/runs/: batch.json
experiments/rq3/configs/n3/: config.json
experiments/rq3/configs/n4/: config.json
experiments/rq3/results/: rq3_bootstrap_summary.csv  rq3_top3_n3.csv  rq3_top3_n4.csv
experiments/rq3/results/bootstrap/: bootstrap__n3__global.csv  bootstrap__n4__global.csv  bootstrap__n4__global.manifest.json
experiments/rq4/results/: summary.csv
fault_localization/: pyproject.toml
fault_localization/rp_analysis/: bootstrap.py  cli.py  datasets.py  filters.py  judge_cli.py  judge_config.py  judge_metrics.py  judge_prompt.py  judge_report.py  judge_run.py  judge_runner.py  judge_study.py  judge_summarize.py  judge_tasks.py  markov.py  markov_patterns.py  matrix.py  ngrams.py  orchestrator.py  orchestrator_config.py  paths.py  pattern_collapse.py  sbfl.py  stats.py  study.py
figures/: manifest.json
scripts/: _common.sh
scripts/cross_task/: run_bootstrap.sh  run_judge.sh  run_rankings.sh  run_significance.sh
scripts/same_task/: run_bootstrap.sh  run_judge.sh  run_rankings.sh  run_significance.sh
(+5669 files in other folders)
